Disable all kind of antialias; better reporting

--- a/draw/index.html
+++ b/draw/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="ui">
-        FPS: <span id="fps">?</span>
+        FPS: <span id="fps">?</span><br>
+        DPR: <span id="dpr">?</span><br>
+        Size: <span id="size">?</span><br>
     </div>
     <canvas id="canvas"></canvas>
     <script src="main.js"></script>
